@@ -1,5 +1,14 @@
 2005-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/Makefile.am:
+	* src/Printer.cpp:
+	* src/Printer.h:
+	* src/main.cpp:
+
+	Add gnome-web-print to print the page to postscript file.
+
+2005-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/prefs.js:
 
 	Disable error pages.
